fixed alignemnt

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   list-style: none;
   box-sizing: border-box;
   color: var(--clr-white);
-  font-family: Bebas Neue;
+  font-family: Bebas Neue, sans-serif;
   background: none;
   border: none;
 }
@@ -92,6 +92,8 @@ p {
 
 .see-projects-button {
   position: absolute;
+  display: flex;
+  gap: 10px;
   top: calc(var(--index) * 32.5);
   padding-left: calc(var(--index) * 4);
   font-size: 32px;
